updated css to fix in dark mode

--- a/src/components/AnimalDetail/animalDetail.module.css
+++ b/src/components/AnimalDetail/animalDetail.module.css
@@ -13,6 +13,7 @@
 
 .modalContent {
   background-color: white;
+  color: black;
   padding: 2rem;
   border-radius: 12px;
   max-width: 800px;
